$Id: Changelog.txt,v 1.32 2013/09/10 20:13:26 nanard Exp $

2013/09/10:
  small patch for MSVC >= 16

2012/08/21:
  Little change in Makefile
  removed warnings in testgetgateway.c
  Fixed bugs in command line argumentparsing in natpmpc.c

2011/08/07:
  Patch to build on debian/kFreeBSD.

2011/07/15:
  Put 3 clauses BSD licence at the top of source files.

2011/06/18:
  --no-undefined => -Wl,--no-undefined
  adding a natpmpc.1 man page

2011/05/19:
  Small fix in libnatpmpmodule.c thanks to Manuel Mausz

2011/01/03:
  Added an argument to initnatpmp() in order to force the gateway to be used

2011/01/01:
  fix in make install

2010/05/21:
  make install now working under MacOSX (and BSD)

2010/04/12:
  cplusplus stuff in natpmp.h

2010/02/02:
  Fixed compilation under Mac OS X

2009/12/19:
  improve and fix building under Windows.
  Project files for MS Visual Studio 2008
  More simple (and working) code for Win32.
  More checks in the /proc/net/route parsing. Add some comments.

2009/08/04:
  improving getgateway.c for windows

2009/07/13:
  Adding Haiku code in getgateway.c

2009/06/04:
  Adding Python module thanks to David Wu

2009/03/10:
  Trying to have windows get gateway working if not using DHCP

2009/02/27:
  dont include declspec.h if not under WIN32.

2009/01/23:
  Prefixed the libraries name with lib

2008/10/06:
  Fixed a memory leak in getdefaultgateway() (USE_SYSCTL_NET_ROUTE)

2008/07/03:
  Adding WIN32 code from Robbie Hanson

2008/06/30:
  added a Solaris implementation for getgateway().
  added a LICENCE file to the distribution

2008/05/29:
  Anonymous unions are forbidden in ANSI C. That was causing problems with
  non-GCC compilers.

2008/04/28:
  introduced strnatpmperr()
  improved natpmpc.c sample
  make install now install the binary

2007/12/13:
  Fixed getgateway.c for working under OS X ;)
  Fixed values for NATPMP_PROTOCOL_TCP and NATPMP_PROTOCOL_UDP

2007/12/11:
  Fixed getgateway.c for compilation under Mac OS X

2007/12/01: