@@ -2,6 +2,7 @@ $Id: Changelog.txt,v 1.32 2013/09/10 20:13:26 nanard Exp $
 
 2013/09/10:
   small patch for MSVC >= 16
+  rename win32 implementation of gettimeofday() to natpmp_gettimeofday()
 
 2012/08/21:
   Little change in Makefile
